--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+.container{
+  height: 100vh;
+  width: 100wh;
+  box-sizing: border-box;
+  align-items: center;
+  border: 2px solid black;
+}
+.row{
+  justify-content: center;
+  border: 2px #282c34 solid;
+  margin: 0;
+  padding: 0;
+
+}
+.col1{
+  max-width: 95% !important;
+  height: 300px;
+  background-color: red;
+  margin: 0;
+  padding: 0;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
