--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,40 @@
 
 }
 .col1{
-  max-width: 95% !important;
+  max-width: 100% !important;
   height: 300px;
   background-color: red;
   margin: 0;
   padding: 0;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.col2{
+  max-width: 650px !important;
+  height: 300px;
+  margin: 0;
+  padding: 0;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.i1{
+width: 40%;
+float: right;
+height: 100%;
+margin: 0;
+padding: 0;
+}
+.card-body{
+  background-color:grey;
+}
+.fnt{
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+}
+.main1{
+  width: 70%;
+}
+.side1{
+  width: 30%;
+}
+.bg1{
+  background-color:rgb(221, 209, 194);
 }
