--- a/src/App.css
+++ b/src/App.css
@@ -37,15 +37,15 @@
   }
 }
 .container{
-  height: 100vh;
-  width: 100wh;
+  height: auto;
+  width: 100vw;
   box-sizing: border-box;
   align-items: center;
-  border: 2px solid black;
+  border: 1px solid black;
+  background-color:antiquewhite;
 }
 .row{
   justify-content: center;
-  border: 2px #282c34 solid;
   margin: 0;
   padding: 0;
 
@@ -53,7 +53,8 @@
 .col1{
   max-width: 100% !important;
   height: 300px;
-  background-color: red;
+  background-color: burlywood;
+  color: black;
   margin: 0;
   padding: 0;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -73,7 +74,7 @@ margin: 0;
 padding: 0;
 }
 .card-body{
-  background-color:grey;
+  background-color:burlywood;
 }
 .fnt{
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -87,4 +88,13 @@ padding: 0;
 }
 .bg1{
   background-color:rgb(221, 209, 194);
+}
+.bf{
+font-size:40px;
+font-weight:bolder;
+font-style: italic;
+}
+.g1{
+  word-spacing: 2px;
+  font-family: 'Times New Roman', Times, serif;
 }
