Update some details almost complete modify leter

--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,8 @@ font-style: italic;
   word-spacing: 2px;
   font-family: 'Times New Roman', Times, serif;
 }
+.image1{
+  height: 295px;
+  opacity: 25%;
+
+}
