--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  background-image:url("./assets/btc\ background.jpg");
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
 }
 
 .App-logo {
@@ -42,29 +46,30 @@
   box-sizing: border-box;
   align-items: center;
   border: 1px solid black;
-  background-color:antiquewhite;
+  background-image:url("./assets/btc\ background.jpg");
 }
 .row{
   justify-content: center;
   margin: 0;
   padding: 0;
-
 }
 .col1{
   max-width: 100% !important;
-  height: 300px;
-  background-color: burlywood;
+  height: 580px;
+  background-color: black;
   color: black;
   margin: 0;
   padding: 0;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Roboto', sans-serif;
+  font-size: larger;
 }
 .col2{
   max-width: 650px !important;
   height: 300px;
   margin: 0;
   padding: 0;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Roboto', sans-serif;
+  color:white;
 }
 .i1{
 width: 40%;
@@ -74,7 +79,7 @@ margin: 0;
 padding: 0;
 }
 .card-body{
-  background-color:burlywood;
+  background-color:rgba(20,34,105,255);
 }
 .fnt{
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -88,6 +93,7 @@ padding: 0;
 }
 .bg1{
   background-color:rgb(221, 209, 194);
+  margin-top: 30px;
 }
 .bf{
 font-size:40px;
@@ -99,7 +105,17 @@ font-style: italic;
   font-family: 'Times New Roman', Times, serif;
 }
 .image1{
-  height: 295px;
+  height: 580px;
   opacity: 25%;
 
+}
+.n1{
+  margin: 0;
+  padding: 0;
+  background-color: black;
+}
+.bn{
+ background:rgb(75, 75, 197);
+ margin: 0;
+ padding: 0;
 }
