--- a/src/App.css
+++ b/src/App.css
@@ -64,12 +64,12 @@
   font-size: larger;
 }
 .col2{
-  max-width: 650px !important;
   height: 300px;
-  margin: 0;
+  margin: 5px !important;
   padding: 0;
   font-family:'Roboto', sans-serif;
   color:white;
+  border-radius: 2px solid black;
 }
 .i1{
 width: 40%;
