--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@
   font-size: larger;
 }
 .col2{
-  height: 300px;
+  height: 300px !important;
   margin: 5px !important;
   padding: 0;
   font-family:'Roboto', sans-serif;
