--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image:url("./assets/btc\ background.jpg");
+  background-image:url("./components/assets/btc\ background.jpg");
   height: 100vh;
   width: 100%;
   box-sizing: border-box;
@@ -46,7 +46,7 @@
   box-sizing: border-box;
   align-items: center;
   border: 1px solid black;
-  background-image:url("./assets/btc\ background.jpg");
+  background-image:url("./components/assets/btc\ background.jpg");
 }
 .row{
   justify-content: center;
@@ -64,17 +64,21 @@
   font-size: larger;
 }
 .col2{
-  height: 300px !important;
-  margin: 5px !important;
+  min-height: 300px !important;
   padding: 0;
   font-family:'Roboto', sans-serif;
-  color:white;
+  color:black;
   border-radius: 2px solid black;
+  
+}
+.col2:hover{
+  box-shadow: 2px -1px 23px 17px rgba(235,17,17,0.33);
+  -webkit-box-shadow: 2px -1px 23px 17px rgba(235,17,17,0.33);
+  -moz-box-shadow: 2px -1px 23px 17px rgba(235,17,17,0.33);
 }
 .i1{
 width: 40%;
-float: right;
-height: 100%;
+height: 250px !important;
 margin: 0;
 padding: 0;
 }
@@ -118,10 +122,10 @@ font-style: italic;
  background:rgb(75, 75, 197);
  margin: 0;
  padding: 0;
- height: 80px !important;
+ height: 50px !important;
 }
 .l1{
-background-image:url('./assets/fire_gifs.gif');
+background-image:url('./components/assets/fire_gifs.gif');
 background-size: cover;
 -webkit-background-clip: text;
 color:transparent;
@@ -131,11 +135,11 @@ color:transparent;
 .navMenu{
   margin:0;
   margin-right: -10px;
-  height: 20px;
-  padding:0;
+  height: 10px;
+  padding: 0;
 }
 .st:hover{
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+font-family:Georgia, 'Times New Roman', Times, serif;
 }
 .st::after{
   content: "";
@@ -158,11 +162,11 @@ height: 60px !important;
 
 }
 .s1{
-  border-bottom: 3px solid black !important;
-    border-radius: 250px 0px 250px 0px !important;
+  /* border-bottom: 3px solid black !important; */
+    border-radius: 250px 0px 0px 0px !important;
     letter-spacing: 4px !important;
     transition: 0.5s !important;
-    margin-top: 38px !important;
+    margin-top: 18px !important;
     text-decoration: none;
   height: 40px !important;
   
@@ -191,8 +195,11 @@ height: 60px !important;
   /* margin-left: 40px !important; */
   /* padding:0 !important; */
   margin:0 !important;
-  margin-top: 25px !important;
+  margin-top: 20px !important;
 }
 .bc{
-  height: 80px !important;
+  height: 70px !important;
+}
+.button1{
+  border-radius: 0px 250px 0px 0px !important;
 }
